# autopack

./: README.md  pyproject.toml  test_memory_fix.py
.github/workflows/: python-publish.yml
autopack/: cli.py  quantize.py
